--- a/css/style.css
+++ b/css/style.css
@@ -647,6 +647,18 @@ ul {
   background-size: cover;
 }
 
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .hero-section {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero-background@2x.jpg);
+  }
+}
+
 @media (min-width: 768px) {
   .hero-section {
     width: 100%;
